--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 body {
   background-image: linear-gradient(
     43deg,
-    #4158d0 0%,
-    #c850c0 46%,
-    #ffcc40 100%
+    #212223 0%,
+    #d82d16 46%,
+    #dad1b9 100%
   );
   height: 100vh;
   display: flex;
